feat: add OpenAPI documentation and Swagger UI endpoints

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"start": "bun src/index.ts"
 	},
 	"dependencies": {
+		"@hono/swagger-ui": "^0.5.3",
 		"hono": "^4.12.0"
 	},
 	"devDependencies": {
