--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"scripts": {
 		"dev": "bun run --watch src/index.ts",
 		"test": "bun test",
-		"start": "bun src/index.ts"
+		"start": "bun src/index.ts",
+		"build": "bun build ./src/index.ts --outdir ./dist --target bun"
 	},
 	"dependencies": {
 		"@hono/swagger-ui": "^0.5.3",
