--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"hono": "^4.12.0"
 	},
 	"devDependencies": {
-		"@types/bun": "latest"
+		"@types/bun": "latest",
+		"wrangler": "^4.67.0"
 	},
 	"module": "src/index.ts",
 	"type": "module",
