--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"test": "bun test",
 		"start": "bun src/index.ts",
 		"build": "bun build ./src/index.ts --outdir ./dist --target bun",
-		"deploy": "wrangler deploy src/index.ts --name indo-mock-api"
+		"deploy": "wrangler deploy"
 	},
 	"dependencies": {
 		"@hono/swagger-ui": "^0.5.3",
